--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,13 @@
   display: none;
 }
 
+ul {
+  list-style: none;
+}
+
+.roster img{
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
