style clinic profile tabs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,3 +33,9 @@ ul {
   align-items: center;
   margin-top: 75px;
 }
+
+.profile-main,
+.profile-main > div,
+.profile-main > div > div{
+  height: 100%;
+}
