--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* TEMPORARY STYLES -- CONVERT TO TAILWIND */
 p{
   margin: unset;
