--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,9 +30,11 @@ ul {
 
 .roster img{
   object-fit: cover;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 
 .flex-temp{
