style new and edit doctor forms

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -725,6 +725,11 @@ video {
   padding-top: 0.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
