--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -693,6 +693,10 @@ video {
   width: 18rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -719,6 +723,10 @@ video {
 
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .border {
