--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -4,32 +4,77 @@ Material UI scroll bar styling
 */
 
 $scrollcolor: gray;
+$backgroundWhite: white;
+$eventColor: #004085;
+
+/* App.css */
+
+/* Customize the FullCalendar header */
+.fc .fc-toolbar {
+  background-color: #f8f9fa;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+/* Customize the calendar title */
+.fc .fc-toolbar h2 {
+  color: #333;
+  font-size: 1.5em;
+}
+
+/* Customize the previous, next, and today buttons */
+.fc .fc-button {
+  background-color: $backgroundWhite;
+  
+  color: $eventColor;
+  margin-right: 5px;
+}
+
+.fc .fc-button:hover {
+  background-color: #0056b3;
+  border-color: #004085;
+}
+
+/* Customize the day cells */
+.fc .fc-daygrid-day {
+  background-color: #ffffff;
+  border: 1px solid #dee2e6;
+}
+
+.fc .fc-daygrid-day:hover {
+  background-color: #f1f1f1;
+}
+
+/* Customize the events */
+.fc .fc-event {
+  background-color: $eventColor;
+  border-color: $eventColor;
+  color: #fff;
+}
+
+/* Customize the scrollbar for the FullCalendar scroller */
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar-thumb {
+  background-color: var(--scrollcolor, #888);
+  border-radius: 10px;
+  border: 2px solid #f1f1f1;
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar-thumb:hover {
+  background-color: $scrollcolor
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar-corner {
+  background: #f1f1f1;
+}
 
 
-.MuiList-root {
-    &::-webkit-scrollbar {
-      width: 12px;
-      height: 12px;
-    }
   
-    &::-webkit-scrollbar-track {
-      background: #f1f1f1;
-    }
-  
-    &::-webkit-scrollbar-thumb {
-      background-color: $scrollcolor;
-      border-radius: 10px;
-      border: 2px solid #f1f1f1;
-  
-      &:hover {
-        background-color: $scrollcolor;
-      }
-    }
-  
-    &::-webkit-scrollbar-corner {
-      background: #f1f1f1;
-    }
-  }
-  .MuiMultiSectionDigitalClockSection-root::after{
-    display: none !important;
-  }
